--- a/style.css
+++ b/style.css
@@ -11,14 +11,28 @@ html{
     padding: 0;
 }
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 body{
     align-items: center;
-    background: linear-gradient(320deg, #eb92be, #ffef78, #63c9b4);
+    background: linear-gradient(310deg, #55079d, #6d70ff, #77d6fb, #00ffd9bc);
+    background-size: 300% 300%;
     display: flex;
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
     font-display: swap;
     height: inherit;
     justify-content: center;
+    animation: gradient 15s ease infinite;
 }
 
 .wrapper{
@@ -32,7 +46,7 @@ body{
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     background: rgba(255,255,255,0.30);
-    border: 1px solid rgba(255,255,255,0.34);
+    border: 4px solid rgba(255,255,255,0.34);
     flex-basis: 400px;
     height: 540px;
     padding: 20px 35px;
@@ -69,7 +83,7 @@ body{
     color: #232323;
     flex-basis: 20%;
     font-family: inherit;
-    font-size: 24px;
+    font-size: 35px;
     height: 65px;
 }
 
@@ -81,7 +95,7 @@ body{
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35,35,35,0.1);
     color: #fff;
-    background: #d72880;
+    background: #6d70ff;
 }
 
 .calc-button:last-child:hover{
